# special-invention

./: .gitignore  .prettierignore  .prettierrc.toml  README.md  checkRoutes.js  fly.toml  index.umd.js  manage.py  package.json  pyproject.toml  remix.config.js  tsconfig.json
app/: root.jsx  sample.html  utils.js
app/components/: header-title.jsx
app/hooks/: use-localstorage.js
app/models/: pageview.server.js  post.server.js  project.server.js  user.server.js
app/routes/: _index.jsx  api.identify._index.jsx  api.page_view._index.jsx  join.jsx  navigation.jsx  posts.$slug.jsx  posts._index.jsx  posts.admin.$slug.jsx  posts.admin.jsx  posts.admin.new.jsx  projects.$id.jsx  projects._index.jsx  tasks._index.jsx  user.settings.jsx
blog_tutorial/: asgi.py  minica  settings.py  urls.py  wsgi.py
blogs/: urls.py
chats/: consumers.py  forms.py  models.py  routing.py  seed.py  urls.py  views.py
chats/migrations/: 0001_initial.py  0002_contact.py  0003_message_author_message_timestamp.py  0004_remove_message_author_remove_message_message_and_more.py  0005_alter_chat_messages_alter_chat_participants_and_more.py  0006_alter_message_content.py
prisma/: post.ts  runner.js  schema.prisma  seed.ts  user-seed.js  user-seed.ts  users.ts
prisma/source/: todos.json  users.json
public/: analytics.html  contribute.json  standalone-vue.html
scripts/: advanced-headers.json  migrate.sh  setup_redis_daemon.sh  subresource_integrity.sh  terminate-process.sh
templates/: base_generic.html
users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
(+62 files in other folders)
