[tool.poetry]
name = "blog-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "blog_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
channels = {extras = ["daphne"], version = "^4.0.0"}
whitenoise = "^6.5.0"
isort = "^5.12.0"
black = "^23.3.0"
channels-redis = "^4.1.0"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
